plugins/storage-api-test/1.0.0/chat.md
# Chat Log — 🧪 Storage API Test v1.0.0

> Generated by Plugin Studio on 2026-04-16

---

## You

api.registerWidget({
  type: 'storage-api-test',
  title: '🧪 Storage API Test',
  description: 'Tests api.storage — key/value persistence',
  height: 380,
  render: async function(container, config) {
    const log = (msg, ok = true) => {
      const el = document.createElement('div')
      el.style.cssText = `padding:4px 8px;margin:2px 0;border-radius:4px;font-size:13px;font-family:monospace;background:${ok ? '#14532d' : '#450a0a'};color:${ok ? '#86efac' : '#fca5a5'}`
      el.textContent = (ok ? '✓ ' : '✗ ') + msg
      container.querySelector('#log').appendChild(el)
    }

    container.innerHTML = `
      <div style="padding:16px;background:#0f172a;height:100%;box-sizing:border-box;overflow:auto">
        <div style="color:#e2e8f0;font-weight:600;margin-bottom:12px">api.storage tests</div>
        <div id="log"></div>
        <button id="run" style="margin-top:12px;padding:8px 16px;background:#3b82f6;color:#fff;border:none;border-radius:6px;cursor:pointer;font-size:13px">Run tests</button>
      </div>`

    container.querySelector('#run').onclick = async () => {
      container.querySelector('#log').innerHTML = ''
      container.querySelector('#run').disabled = true

      try {
        // 1. set + get round-trip
        await api.storage.set('test-string', 'hello')
        const s = await api.storage.get('test-string')
        s === 'hello' ? log('set/get string: "hello"') : log(`set/get string: got ${JSON.stringify(s)}`, false)

        // 2. JSON value
        await api.storage.set('test-object', { x: 1, arr: [1,2,3] })
        const o = await api.storage.get('test-object')
        JSON.stringify(o) === JSON.stringify({ x: 1, arr: [1,2,3] })
          ? log('set/get object: {x:1, arr:[1,2,3]}')
          : log(`set/get object: got ${JSON.stringify(o)}`, false)

        // 3. overwrite
        await api.storage.set('test-string', 'world')
        const s2 = await api.storage.get('test-string')
        s2 === 'world' ? log('overwrite: "world"') : log(`overwrite: got ${JSON.stringify(s2)}`, false)

        // 4. get missing key → null
        const missing = await api.storage.get('__nonexistent__')
        missing === null ? log('get missing key: null') : log(`get missing key: got ${JSON.stringify(missing)}`, false)

        // 5. list
        const entries = await api.storage.list()
        const keys = entries.map(e => e.key).sort()
        keys.includes('test-string') && keys.includes('test-object')
          ? log(`list: ${keys.length} key(s) — ${keys.join(', ')}`)
          : log(`list: unexpected keys ${JSON.stringify(keys)}`, false)

        // 6. delete
        await api.storage.delete('test-string')
        const afterDelete = await api.storage.get('test-string')
        afterDelete === null ? log('delete: key removed') : log('delete: key still present', false)

        // 7. rate limit — 60 writes should succeed, 61st should throw
        let rateLimitHit = false
        try {
          for (let i = 0; i < 62; i++) await api.storage.set('rl-test', i)
        } catch(e) {
          rateLimitHit = e.message.includes('rate limit')
        }
        rateLimitHit ? log('rate limit: triggered at write 61') : log('rate limit: NOT triggered — check implementation', false)

        // Cleanup
        await api.storage.delete('test-object')
        await api.storage.delete('rl-test')
        log('cleanup: done')

      } catch(e) {
        log(`unexpected error: ${e.message}`, false)
      }

      container.querySelector('#run').disabled = false
      container.querySelector('#run').textContent = 'Run again'
    }
  }
})

---

## Claude

Here's the **Storage API Test** widget installed and ready to use.

---

[Plugin code — see plugin.js]

---

### What it tests

| # | Test | Pass condition |
|---|------|---------------|
| 1 | `set` + `get` string | Returns exact value `"hello"` |
| 2 | `set` + `get` object | Deep-equal JSON round-trip |
| 3 | Overwrite existing key | Returns new value `"world"` |
| 4 | `get` missing key | Returns `null` |
| 5 | `list` | Both test keys appear |
| 6 | `delete` | Key returns `null` after deletion |
| 7 | Rate limit | Throws with `"rate limit"` in message after 61 writes |

Click **▶ Run tests** to execute the full suite. Results are colour-coded — green ✓ for pass, red ✗ for fail. The widget cleans up all test keys after each run so it can be re-run safely.

---
