plugins/storage-api-test/1.0.1/chat.md
# Chat Log — 🧪 Storage API Test v1.0.1

> Generated by Plugin Studio on 2026-04-16

---

## You

api.registerWidget({
  type: 'storage-api-test',
  title: '🧪 Storage API Test',
  description: 'Tests api.storage — key/value persistence',
  height: 380,
  render: async function(container, config) {
    const log = (msg, ok = true) => {
      const el = document.createElement('div')
      el.style.cssText = `padding:4px 8px;margin:2px 0;border-radius:4px;font-size:13px;font-family:monospace;background:${ok ? '#14532d' : '#450a0a'};color:${ok ? '#86efac' : '#fca5a5'}`
      el.textContent = (ok ? '✓ ' : '✗ ') + msg
      container.querySelector('#log').appendChild(el)
    }

    container.innerHTML = `
      <div style="padding:16px;background:#0f172a;height:100%;box-sizing:border-box;overflow:auto">
        <div style="color:#e2e8f0;font-weight:600;margin-bottom:12px">api.storage tests</div>
        <div id="log"></div>
        <button id="run" style="margin-top:12px;padding:8px 16px;background:#3b82f6;color:#fff;border:none;border-radius:6px;cursor:pointer;font-size:13px">Run tests</button>
      </div>`

    container.querySelector('#run').onclick = async () => {
      container.querySelector('#log').innerHTML = ''
      container.querySelector('#run').disabled = true

      try {
        // 1. set + get round-trip
        await api.storage.set('test-string', 'hello')
        const s = await api.storage.get('test-string')
        s === 'hello' ? log('set/get string: "hello"') : log(`set/get string: got ${JSON.stringify(s)}`, false)

        // 2. JSON value
        await api.storage.set('test-object', { x: 1, arr: [1,2,3] })
        const o = await api.storage.get('test-object')
        JSON.stringify(o) === JSON.stringify({ x: 1, arr: [1,2,3] })
          ? log('set/get object: {x:1, arr:[1,2,3]}')
          : log(`set/get object: got ${JSON.stringify(o)}`, false)

        // 3. overwrite
        await api.storage.set('test-string', 'world')
        const s2 = await api.storage.get('test-string')
        s2 === 'world' ? log('overwrite: "world"') : log(`overwrite: got ${JSON.stringify(s2)}`, false)

        // 4. get missing key → null
        const missing = await api.storage.get('__nonexistent__')
        missing === null ? log('get missing key: null') : log(`get missing key: got ${JSON.stringify(missing)}`, false)

        // 5. list
        const entries = await api.storage.list()
        const keys = entries.map(e => e.key).sort()
        keys.includes('test-string') && keys.includes('test-object')
          ? log(`list: ${keys.length} key(s) — ${keys.join(', ')}`)
          : log(`list: unexpected keys ${JSON.stringify(keys)}`, false)

        // 6. delete
        await api.storage.delete('test-string')
        const afterDelete = await api.storage.get('test-string')
        afterDelete === null ? log('delete: key removed') : log('delete: key still present', false)

        // 7. rate limit — 60 writes should succeed, 61st should throw
        let rateLimitHit = false
        try {
          for (let i = 0; i < 62; i++) await api.storage.set('rl-test', i)
        } catch(e) {
          rateLimitHit = e.message.includes('rate limit')
        }
        rateLimitHit ? log('rate limit: triggered at write 61') : log('rate limit: NOT triggered — check implementation', false)

        // Cleanup
        await api.storage.delete('test-object')
        await api.storage.delete('rl-test')
        log('cleanup: done')

      } catch(e) {
        log(`unexpected error: ${e.message}`, false)
      }

      container.querySelector('#run').disabled = false
      container.querySelector('#run').textContent = 'Run again'
    }
  }
})

---

## Claude

Looking at your existing plugin, I can see a few things to improve:

1. **Hardcoded dark colors** — uses `#0f172a`, `#14532d`, `#450a0a` etc. instead of CSS variables, so it breaks in light theme
2. **Rate-limit test is destructive & slow** — 62 sequential writes will take a while and may leave stale keys
3. **Minor UX** — button state feedback, test count summary

Here's a cleaned-up patch version:

[Plugin code — see plugin.js]

### What changed (`patch`)

| | Before | After |
|---|---|---|
| **Colors** | Hardcoded `#0f172a`, `#14532d`, `#450a0a` | CSS variables — works in light & dark theme |
| **Pass/fail styling** | Solid dark bg | Subtle transparent tint — readable in both themes |
| **Test result summary** | None | `N passed · N failed` counter below the button |
| **Cleanup** | Only on success path | `finally {}` block — always runs, even if a test throws |
| **Log scroll** | Manual | Auto-scrolls to latest entry |
| **Button feedback** | `disabled` only | `⏳ Running…` label during run, `▶ Run again` after |

---
